tests/typechecker/should_fail/dot_operator_no_partially_applied_1.csp
datatype A = B.{0..1} | X.{0..1}.{0..1}
channel e : Bool.A.Bool

test12 = (B.true) == (B.false)
